--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "jwt-decode": "^3.1.2",
     "list-files": "^1.1.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
